# portfolio

./: .env.example  .gitignore  .gitmodules  CONFIG.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  app.py  config.py  config.py.bak  deploy.sh  docker-compose.prod.yml  docker-compose.yml  main.py  nginx.conf  nginx.dev.conf  pyproject.toml  renew-certs.sh  requirements.txt  routes.py  start.sh
.github/workflows/: build-pks.yml  build-podology.yml  deploy.yml
dash_collection/: __init__.py  routes.py
dash_collection/pks/: __init__.py
dash_collection/pks/data/interim/: pks.parquet
dash_collection/pks/data/processed/: pks.parquet
dash_collection/pks/data/raw/: PKS2013.xlsx  PKS2014.xlsx  PKS2015.xlsx  PKS2016.xlsx  PKS2017.xlsx  PKS2018.xlsx  PKS2019.xlsx  PKS2020.xlsx  PKS2021.xlsx  PKS2022.xlsx  Straftatenkatalog_2021.xlsx  Zeitreihen_Bund.xlsx
dash_collection/pks/src/data/: config.py  import_data_pks.py
dash_collection/pks/src/prose/: intro.md  post_clearance_pre_states.md  post_selection_pre_clearance.md  (+1 more)
dashapps/: apps_metadata.py  dashapp1.py  dashapp2.py  interface_dashapp1.py  interface_dashapp2.py  interface_pks.py  with_metadata.py
dashapps/dashapp1/: __init__.py  dashboard.py
dashapps/dashapp1/metadata/: __init__.py
dashapps/dashapp2/: __init__.py  dashboard.py
dashapps/dashapp2/metadata/: __init__.py
static/css/: custom.css
static/prose/: intro.md
static/prose/de/: intro.md
static/prose/en/: intro.md
templates/: base.html  contact.html  contact_de.html  contact_en.html  dashapp.html  index.html  index.jinja2  layout.jinja2
(+1 files in other folders)
